fixing navbar mobile on safari 11

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -406,6 +406,7 @@ section.section-show {
 section .container {
   background: rgba(0, 0, 0, 0.9);
   padding: 30px;
+  z-index: 3;
 }
 
 @media (max-width: 768px) {
